# rOpenCL

./: CITATION.cff  LICENSE  README.md
code/rDaemon/: Makefile  README.txt  common.c  common.h  daemon.c  network.c  network.h  rDaemon  storage.h
code/rOpenCL_driver/: CMakeLists.txt
code/rOpenCL_driver/include/: CMakeLists.txt
code/rOpenCL_driver/lib/CL/: CMakeLists.txt  clBuildProgram.c  clCompileProgram.c  clCreateBuffer.c  clCreateCommandQueue.c  clCreateCommandQueueWithProperties.c  clCreateContext.c  clCreateContextFromType.c  clCreateFromGLTexture2D.c  clCreateFromGLTexture3D.c  clCreateImage.c  clCreateImage2D.c  clCreateImage3D.c  clCreateKernel.c  clCreateKernelsInProgram.c  clCreateProgramWithBinary.c  clCreateProgramWithBuiltInKernels.c  clCreateProgramWithSource.c  clCreateSampler.c  clCreateSubBuffer.c  clCreateSubDevices.c  clCreateUserEvent.c  clEnqueueBarrier.c  clEnqueueBarrierWithWaitList.c  clEnqueueCopyBuffer.c  clEnqueueCopyBufferRect.c  clEnqueueCopyBufferToImage.c  clEnqueueCopyImage.c  clEnqueueCopyImageToBuffer.c  clEnqueueFillBuffer.c  clEnqueueFillImage.c  clEnqueueMapBuffer.c  clEnqueueMapImage.c  clEnqueueMarker.c  clEnqueueMarkerWithWaitList.c  clEnqueueMigrateMemObjects.c  clEnqueueNDRangeKernel.c  clEnqueueNativeKernel.c  clEnqueueReadBuffer.c  clEnqueueReadBufferRect.c  (+73 more)
coverage/: README.txt
installation/: README.txt
installation/rDaemon/: README.md
installation/rOpenCL_driver/: README.md
results/: README.txt
results/v0_benchmarks/babel-stream-benchmark/: README.md
results/v0_benchmarks/cl-mem-benchmark/: README.md
results/v0_benchmarks/clpeak-benchmark /: README.md
results/v0_benchmarks/financebench-benchmark/: README.md
results/v0_benchmarks/hashcat-tool/: README.md
results/v0_benchmarks/polybench-benchmark/: README.md
results/v0_benchmarks/rodinia-benchmark/: README.md
results/v0_benchmarks/similaresapproaches/: README.md
